# deepagents-adapter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  agent_config.py  entrypoint.sh  index.html  pyproject.toml  server.py  test.sh
.claude/commands/: iterate.md  release.md
.claude/commands/iterate/: push-branch.sh  remove-worktree.sh  start-issue.sh
.github/workflows/: build-image.yaml  release-chart.yaml  test.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  languageagentruntime.yaml
tests/: test_agent_config.py
